oprimate css and code (HTML / JS)

--- a/index.html
+++ b/index.html
@@ -7,21 +7,53 @@
     <link rel="icon" type="image/x-icon" href="./img/icons/Pokeball.svg" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./styles/pokemon.css" />
-    <script src="./scripts/templates.js"></script>
+    <script src="./scripts/templates.js"></script>   
   </head>
   <body onload="init()">
+    <div class="Background"></div>
     <header>
       <div class="HeaderBar">
         <img src="./img/icons/pokeball.png" alt="Pokeball" />
         <h1>Pokédex</h1>
       </div>
-      <nav class="SearchBar">
+      <nav class="SearchBar" tabindex="0">
         <input type="text" placeholder="Search.." />
       </nav>
     </header>
+    <main>
+      <div class="OverlayContainer" id="loadPokemon"></div>   
 
-    <div class="OverlayContainer" id="loadPokemon"></div>
+      <div  class="moreButton" id="loadMorePokemon">
+        <button onclick="">LoadMore...</button>
+      </div>
+    </main>
 
+    <footer>
+      <div>
+        Image by
+        <a
+          href="https://pixabay.com/users/dhaval121-2235247/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2713825"
+          >Dhaval Solanki</a
+        >
+        from
+        <a
+          href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2713825"
+          >Pixabay</a
+        >
+      </div>
+      <div>
+        Image by
+        <a
+          href="https://pixabay.com/users/tmstbch-3040875/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1572487"
+          >Tommaso Tabacchi (Background)</a
+        >
+        from
+        <a
+          href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1572487"
+          >Pixabay</a
+        >
+      </div>
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
