--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="./img/icons/pokeball.png" alt="Pokeball" />
         <h1>Pokédex</h1>
       </div>
-      <nav class="SearchBar" tabindex="0">
+      <nav class="SearchBar" tabindex="0" aria-label="searchBar">
         <input type="text" placeholder="Search.." />
       </nav>
     </header>
@@ -29,7 +29,7 @@
     </main>
 
     <footer>
-      <div>
+      <div class="FooterLinks">
         Image by
         <a
           href="https://pixabay.com/users/dhaval121-2235247/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2713825"
@@ -39,9 +39,8 @@
         <a
           href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2713825"
           >Pixabay</a
-        >
-      </div>
-      <div>
+        >     
+      
         Image by
         <a
           href="https://pixabay.com/users/tmstbch-3040875/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1572487"
