--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="./img/icons/Pokeball.svg" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./styles/pokemon.css" />
-    <script src="./scripts/templates.js"></script>   
+    <script src="./scripts/templates.js"></script>
   </head>
   <body onload="init()">
     <div class="Background"></div>
@@ -21,14 +21,17 @@
       </nav>
     </header>
     <main>
-      <div class="OverlayContainer" id="loadPokemon"></div>   
-
-      <div  class="moreButton" id="loadMorePokemon">
-        <button onclick="">LoadMore...</button>
+      <div class="OverlayContainer" id="loadPokemon">
+        <button onclick="loadMorePokemon()">LoadMore...</button>
+      </div>
+      <div class="moreButton">
+        <button onclick="loadMorePokemon()">LoadMore...</button>
       </div>
     </main>
 
-    <footer>
+    <dialog onclick="openPokemonDialog()"></dialog>
+
+    <!-- <footer>
       <div class="FooterLinks">
         Image by
         <a
@@ -39,8 +42,8 @@
         <a
           href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2713825"
           >Pixabay</a
-        >     
-      
+        >
+
         Image by
         <a
           href="https://pixabay.com/users/tmstbch-3040875/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1572487"
@@ -52,7 +55,7 @@
           >Pixabay</a
         >
       </div>
-    </footer>
+    </footer> -->
     <script src="./script.js"></script>
   </body>
 </html>
