--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="./img/icons/Pokeball.svg" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./styles/pokemon.css" />
+    <link rel="stylesheet" href="./styles/pokemonTypes.css">
     <script src="./scripts/templates.js"></script>
   </head>
   <body onload="init()">
@@ -21,9 +22,7 @@
       </nav>
     </header>
     <main>
-      <div class="OverlayContainer" id="loadPokemon">
-        <button onclick="loadMorePokemon()">LoadMore...</button>
-      </div>
+      <div class="OverlayContainer" id="loadPokemon"></div>
       <div class="moreButton">
         <button onclick="loadMorePokemon()">LoadMore...</button>
       </div>
@@ -31,7 +30,7 @@
 
     <dialog onclick="openPokemonDialog()"></dialog>
 
-    <!-- <footer>
+    <footer>
       <div class="FooterLinks">
         Image by
         <a
@@ -55,7 +54,7 @@
           >Pixabay</a
         >
       </div>
-    </footer> -->
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
