--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <link rel="icon" type="image/x-icon" href="./img/icons/Pokeball.svg" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./styles/pokemon.css" />
-<<<<<<< HEAD
     <link rel="stylesheet" href="./styles/pokemonTypes.css">
-=======
->>>>>>> 4b7acadc585d6a52aad077726248fd7b2a8350ed
     <script src="./scripts/templates.js"></script>
   </head>
   <body onload="init()">
@@ -25,13 +22,10 @@
       </nav>
     </header>
     <main>
-<<<<<<< HEAD
       <div class="OverlayContainer" id="loadPokemon"></div>
-=======
       <div class="OverlayContainer" id="loadPokemon">
         <button onclick="loadMorePokemon()">LoadMore...</button>
       </div>
->>>>>>> 4b7acadc585d6a52aad077726248fd7b2a8350ed
       <div class="moreButton">
         <button onclick="loadMorePokemon()">LoadMore...</button>
       </div>
@@ -39,11 +33,8 @@
 
     <dialog onclick="openPokemonDialog()"></dialog>
 
-<<<<<<< HEAD
+   
     <footer>
-=======
-    <!-- <footer>
->>>>>>> 4b7acadc585d6a52aad077726248fd7b2a8350ed
       <div class="FooterLinks">
         Image by
         <a
@@ -67,7 +58,7 @@
           >Pixabay</a
         >
       </div>
-    </footer> -->
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
