--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./styles/pokemon.css" />
     <link rel="stylesheet" href="./styles/pokemonTypes.css" />
+    <link rel="stylesheet" href="./styles/BigPokedexCard.css">
     <script src="./scripts/templates.js"></script>
   </head>
   <body onload="init()">
@@ -33,7 +34,7 @@
       </div>
     </main>
 
-    <dialog onclick="openPokemonDialog()"></dialog>
+    <dialog id="openPokemonDialog"></dialog>
 
     <footer></footer>
     <script src="./script.js"></script>
