--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </main>
 
-    <dialog id="openPokemonDialog"></dialog>
+    <dialog class="dialogPosition" id="openPokemonDialog"></dialog>
 
     <footer></footer>
     <script src="./script.js"></script>
