add > no scroll to dialog > open white enter.

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <main>
       <div class="OverlayContainer" id="loadPokemon"></div>
       <div class="moreButton">
-        <button onclick="loadMorePokemon()">LoadMore...</button>
+        <button class="NoPush" onclick="loadMorePokemon()">LoadMore...</button>
       </div>
     </main>
 
-    <dialog class="dialogPosition" id="openPokemonDialog"></dialog>
+    <dialog class="dialogPosition example-dialog " id="openPokemonDialog"></dialog>
 
     <footer></footer>
     <script src="./script.js"></script>
