--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./styles/pokemon.css" />
     <link rel="stylesheet" href="./styles/pokemonTypes.css" />
-    <link rel="stylesheet" href="./styles/BigPokedexCard.css">
+    <link rel="stylesheet" href="./styles/BigPokedexCard.css" />
     <script src="./scripts/templates.js"></script>
   </head>
   <body onload="init()">
@@ -30,11 +30,24 @@
     <main>
       <div class="OverlayContainer" id="loadPokemon"></div>
       <div class="moreButton">
-        <button class="NoPush" onclick="loadMorePokemon()">LoadMore...</button>
+        <div id="loading-spinner" class="hidden">
+          <div class="spinner"></div>
+        </div>
+
+        <button
+          id="loadMoreBtn"
+          class="NoPush loadMoreBtn"
+          onclick="loadMorePokemon()"
+        >
+          LoadMore...
+        </button>
       </div>
     </main>
 
-    <dialog class="dialogPosition example-dialog " id="openPokemonDialog"></dialog>
+    <dialog
+      class="dialogPosition example-dialog"
+      id="openPokemonDialog"
+    ></dialog>
 
     <footer></footer>
     <script src="./script.js"></script>
