add reset button and search. function und selectet asynch function search

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
           </a>
           <h1>Pokédex</h1>
         </div>
+       
 
-        <nav class="SearchBar" tabindex="0" aria-label="searchBar">
+        <nav class="SearchBar" tabindex="0" aria-label="searchBar">           
           <input
             id="search"
             type="text"
@@ -33,11 +34,16 @@
       </div>
     </header>
     <main>
+    
       <div class="OverlayContainer" id="loadPokemon"></div>
       <div class="moreButton">
         <div id="loading-spinner" class="hidden">
           <div class="spinner"></div>
         </div>
+
+          <button id="resetSearchBtn" class="hidden resetBtn" onclick="resetSearch()">
+          Reset
+        </button>
 
         <button
           id="loadMoreBtn"
@@ -54,7 +60,14 @@
       id="openPokemonDialog"
     ></dialog>
 
-    <footer></footer>
+    <footer>
+      <div class="FooterLinks">
+        <span>Created by Christopher Braun</span>
+      </div>
+      <div class="FooterLinks">
+        <span>2026</span>
+      </div>
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
